--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "apollo": "^2.32.1",
     "autoprefixer": "^10.2.4",
     "graphql": "^15.5.0",
+    "mock-apollo-client": "^1.0.0",
     "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -33,7 +36,7 @@
     "start": "npm run tailwind:build & react-scripts start",
     "apollo:codegen": "rm -rf __generated__ & apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,6 +58,14 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "./src/components/**/*.tsx",
+      "./src/pages/**/*.tsx",
+      "./src/routers/**/*.tsx"
+    ]
   }
 }
