--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "scripts": {
     "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css",
+    "tailwind:build:prod": "NODE_ENV=production npm run tailwind:build",
     "start": "npm run tailwind:build & react-scripts start",
     "apollo:codegen": "rm -rf __generated__ & apollo client:codegen src/__generated__ --target=typescript --outputFlat",
+    "prebuild": "npm run tailwind:build:prod",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test --verbose",
     "eject": "react-scripts eject"
